Change queue heading message when you are in queue

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -97,6 +97,7 @@ teammatchmaking.queueTitle=Join one or more queues when you are ready:
 teammatchmaking.queueTitle.inGame=Can't join queues while you are in a game
 teammatchmaking.queueTitle.memberInGame=Can't join queues while someone is in a game
 teammatchmaking.queueTitle.inParty=The party leader will join the queues
+teammatchmaking.queueTitle.inQueue=Your party is now in queue
 teammatchmaking.queue.ladder1v1.fullName=Ranked 1v1
 teammatchmaking.queue.ladder1v1.shortName=1v1
 teammatchmaking.queue.tmm2v2.fullName=Ranked 2v2
