--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -98,10 +98,8 @@ teammatchmaking.queueTitle.inGame=Can't join queues while you are in a game
 teammatchmaking.queueTitle.memberInGame=Can't join queues while someone is in a game
 teammatchmaking.queueTitle.inParty=The party leader will join the queues
 teammatchmaking.queueTitle.inQueue=Your party is now in queue
-teammatchmaking.queue.ladder1v1.fullName=Ranked 1v1
-teammatchmaking.queue.ladder1v1.shortName=1v1
-teammatchmaking.queue.tmm2v2.fullName=Ranked 2v2
-teammatchmaking.queue.tmm2v2.shortName=2v2
+teammatchmaking.queue.ladder1v1=1v1 Queue
+teammatchmaking.queue.tmm2v2=2v2 Queue
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
