Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -1,6 +1,6 @@
 yes = Ja
 no = Nee
-percentage = \n {0,number,\#.\#}%
+percentage = \n {0,number,#.#}%
 report = Verslag
 # Better for Dutch is "Foutdetails". Why make it complicated when it can be done in one word.
 errorDetails = Foutdetails
@@ -56,7 +56,7 @@ coop.leaderboard.time = Tijd
 coop.leaderboard.replay = Opnieuw spelen
 coop.leaderboard.allPlayers = Allemaal
 coop.leaderboard.singlePlayer = 1 speler
-coop.leaderboard.numberOfPlayersFormat = {0,nummer,\#} spelers
+coop.leaderboard.numberOfPlayersFormat = {0,nummer,#} spelers
 coop.leaderboard.couldNotLoad = Samenwerking-scoreboard kon niet geladen worden.
 coop.couldNotLoad = Samenwerkingsmissies kon niet geladen worden\: {0}
 ranked1v1.players = Speler (met tenminste {0} spellen gespeeld)
@@ -76,10 +76,10 @@ ranked1v1.ratingHint.high = Jouw plaats is hoog. Wil je anderen helpen om te ver
 ranked1v1.ratingHint.top = Gefeliciteerd\! Je bent nu een top speler. Deel je kennis.
 ranked1v1.gamesPlayed = Spellen gespeeld
 ranked1v1.ranking = Jouw plaats
-ranked1v1.rankingOutOf = van {0,number,\#} spelers
+ranked1v1.rankingOutOf = van {0,number,#} spelers
 ranked1v1.searching = Zoeken naar een tegenstander...
 ranked1v1.winLossRation = Win/verlies ratio
-ranked1v1.rankingFormat = \#{0,number,\#}
+ranked1v1.rankingFormat = \#{0,number,#}
 ranked1v1.notification.title = 1v1 geclassificeerde wedstrijd beschikbaar
 ranked1v1.notification.message = Klik hier om de 1v1 tab te openen
 statusBar.chatConnected = Chat verbonden
@@ -120,7 +120,7 @@ chat.sendMessageTask.title = Chat bericht verzenden...
 chat.sendActionTask.title = Chat actie verzenden...
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Afbeelding uploaden...
-chat.userCount = \ {0,number,\#} gebruikers (typ om te zoeken)
+chat.userCount = \ {0,number,#} gebruikers (typ om te zoeken)
 chat.mapName = Map Naam\: {0}
 chat.filter.filter = Filter
 chat.filter.prompt = Zoeken in kanaal
@@ -139,12 +139,12 @@ chat.privateMessage.playerLeft = {0} is nu afwezig
 chat.privateMessage.playerReconnect = {0} is terug aanwezig
 chat.privateMessage.globalRating = Classifciatie wereld
 chat.privateMessage.ladder1v1Rating = 1v1 classificatie
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Spellen gespeeld
 chat.privateMessage.currentlyPlaying = Nu aan het spelen
 chat.privateMessage.game.players = Spelers
 chat.privateMessage.achievements.unlocked = Vrijgespeelde prestaties
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Spel maken
 games.create.minRating = Min.
 games.create.maxRating = Max.
@@ -174,19 +174,19 @@ game.title = Titel
 game.players = Spelers
 game.map = Map
 game.rating = Classificatie
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Beoordeling buiten grenzen
-game.joinGameRatingConfirmation.text = Dit spel is voor spelers met een classificatie tussen {0,number,\#} en {1,number,\#}, je huidige classificatie is echter {2,number,\#}.\n\nWeet je zeker dat je wilt meespelen?
+game.joinGameRatingConfirmation.text = Dit spel is voor spelers met een classificatie tussen {0,number,#} en {1,number,#}, je huidige classificatie is echter {2,number,#}.\n\nWeet je zeker dat je wilt meespelen?
 game.type = Type
 game.mods = Mods
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} spelers
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} spelers
 game.join = Doe mee
 game.cancel = Annuleer
 game.host = Host
-game.tooltip.teamTitle = Team {0} ({1,number,\#})
+game.tooltip.teamTitle = Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Geen Team
 game.tooltip.observers = Observeerders
 game.join.passwordPrompt = Vul wachtwoord van spel in
@@ -195,7 +195,7 @@ game.start.couldNotStart = Het spel kon niet gestart worden. Zie details fouten 
 game.full = Spel is vol
 game.full.action = Klik om spel te openen
 # Fuzzy
-game.mods.twoAndMore = {0} en {1,number,\#} meer
+game.mods.twoAndMore = {0} en {1,number,#} meer
 game.gameStatus = Spel status
 game.gameStatus.playing = Spelen
 game.gameStatus.lobby = Wachten tot het spel start
@@ -209,10 +209,15 @@ game.endTime = Eindtijd
 game.validity = Validiteit
 game.victoryCondition = Overwinningsconditie
 game.player.id = Speler ID
+# Fuzzy
 game.player.username = Naam speler
+# Fuzzy
 game.player.faction = Factie speler
+# Fuzzy
 game.player.team = Team speler
+# Fuzzy
 game.player.startSpot = Startpositie speler
+# Fuzzy
 game.player.score = Speler score
 game.host.id = ID host
 game.host.username = Host gebruiksnaam
@@ -221,6 +226,7 @@ game.map.width = Map breedte (in px)
 game.map.version = Versie map
 game.map.folderName = Map bestandsnaam
 game.map.isRanked = De map is geclassificeerd
+# Fuzzy
 game.map.displayName = Naam map
 game.options = Spel opties
 game.optionKey = Optie
@@ -236,7 +242,7 @@ game.watch = Bekijk
 game.watchButtonFormat = Bekijk ({0})
 game.watchDelayedFormat = Bekijkbaar in {0}
 game.replayFileMissing = Bestand om te herspelen ontbreekt
-game.idFormat = \n \#{0,number,\#}
+game.idFormat = \n \#{0,number,#}
 game.lineUp = Rij
 featuredMod.displayName = Naam mod spel
 featuredMod.technicalName = Korte naam mod spel
@@ -252,8 +258,10 @@ login.button.cancel = Annuleer
 login.progress.message = Inloggen...
 vault.maps = Mappen
 vault.mods = Mods
+# Fuzzy
 vault.onlineReplays = Online herhalingen
 vault.localReplays = Lokale herhalingen
+# Fuzzy
 vault.liveReplays = Live herhalingen
 vault.replays.loading = Laden herhalingen...
 vault.replays.newest = Meest Recent
@@ -265,8 +273,10 @@ vault.more = Meer...
 modVault.newestMods = Meest recent
 modVault.install = Installeren
 modVault.uninstall = Deïnstalleren
-modVault.installationFailed = Mod ''{0}'' kon niet geïnstalleerd worden\: {1}
-modVault.couldNotDeleteMod = Mod ''{0}'' kon niet verwijderd worden\: {1}
+# Fuzzy
+modVault.installationFailed = Mod ''''{0}'''' kon niet geïnstalleerd worden\: {1}
+# Fuzzy
+modVault.couldNotDeleteMod = Mod ''''{0}'''' kon niet verwijderd worden\: {1}
 modVault.loadingMods = Mods aan het laden...
 modVault.upload.chooseDirectory = Kies map mod
 modVault.upload = Upload mod...
@@ -294,8 +304,8 @@ mapVault.upload.failed = Map kon niet geladen worden. De server gaf de volgende 
 mapVault.upload.mapSize = Grootte
 mapVault.upload.players = Spelers
 mapVault.upload.chooseDirectory = Kies locatie map
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Ik bevestig dat de map naar behoren is gebalanceerd en dat het geen verboden code bevat. Ik ben bewust dat schending hiervan resulteerd in een ban. Het uitvinken van de resultaten is een niet geclassificeerde map.
 mapVault.upload.retry = Probeer opnieuw
 mapVault.loadingMaps = Mappen laden...
@@ -319,12 +329,14 @@ map.ranked = Geclassificeerd
 map.reviews = Beoordelingen
 map.updated = Aangepast
 map.maxPlayers = Max. spelers
+# Fuzzy
 map.width = Breedte (in px)
+# Fuzzy
 map.height = Hoogte (in px)
 map.uploadedDateTime = Upgeload
 map.updatedDateTime = Aangepast
 mapPreview.name = Map Naam\: {0}
-mapPreview.size = {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Een voorvertoning van de map kon niet geladen worden
 replays.loadingOnlineTask.title = Laad aanwezige herhalingen...
 replays.loadingOnlineTask.failed = Aanwezige herhalingen konden niet geladen worden.
@@ -376,44 +388,46 @@ userInfo.ratingOverTime = Classificatie over tijd
 userInfo.ratingHistory.1v1 = 1v1
 userInfo.ratingHistory.global = Globaal
 userInfo.achievements = Prestaties
-userInfo.tooltipFormat = \ {0} ({1,number,\#})
-userInfo.ratingFormat = Wereld classificatie\: {0,number,\#}\nScoreboard classificatie\: {1,number,\#}
+userInfo.tooltipFormat = \ {0} ({1,number,#})
+userInfo.ratingFormat = Wereld classificatie\: {0,number,#}\nScoreboard classificatie\: {1,number,#}
 user.status.hosting = Hosting\: {0}
 user.status.waiting = Wachten in\: {0}
 user.status.playing = Spelen\: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Meest recent
 achievements.loading = Laden prestaties...
-achievements.unlocked = Ontgrendeld ({0,number,\#})
-achievements.locked = Open ({0,number,\#})
+achievements.unlocked = Ontgrendeld ({0,number,#})
+achievements.locked = Open ({0,number,#})
 replayServer.listeningFailed = Herhalingen server kon niet gestart worden
 replayServer.retry = Probeer opnieuw
 replayServer.unreachable = De herhalingen server is niet bereikbaar, het spel kan niet opgenomen worden.
+# Fuzzy
 corruptedMods.notification = Mod is niet meer goed en kan niet meer geladen worden\: {0}.
 corruptedMods.show = Laat zien
 corruptedReplayFiles.notification = Er zitten fouten in de herhalingen op je schijf. Deze zijn verplaatst naar een aparte map voor jouw gemak.
 corruptedReplayFiles.show = Laat zien
-mapNotFound = Map ''{0}'' kon niet gevonden worden op de server of op deze computer.
-replayCouldNotBeStarted = Herhaling {0,number,\#} kon niet gestart worden. Zie het foutenbericht hier beneden.
+# Fuzzy
+mapNotFound = Map ''''{0}'''' kon niet gevonden worden op de server of op deze computer.
+replayCouldNotBeStarted = Herhaling {0,number,#} kon niet gestart worden. Zie het foutenbericht hier beneden.
 liveReplayCouldNotBeStarted = Liver herhaling kon niet gestart worden. Zie het foutenbericht hier beneden.
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {1,number,\#}s
-duration.hourMinutes = {0,number,\#}h {1,number,\#}min
+duration.seconds = {0,number,#}s
+duration.minutesSeconds = {0,number,#}min {1,number,#}s
+duration.hourMinutes = {0,number,#}h {1,number,#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020vsu0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = ,u0020
-secondsAgo = {0,number,\#} seconden geleden
-minuteAgo = {0,number,\#} minuut geleden
-minutesAgo = {0,number,\#} minuten geleden
-hourAgo = {0,number,\#} uur geleden
-hoursAgo = {0,number,\#} uren geleden
-dayAgo = {0,number,\#} dag geleden
-daysAgo = {0,number,\#} dagen geleden
-monthAgo = {0,number,\#} maand geleden
-monthsAgo = {0,number,\#} maanden geleden
-yearAgo = {0,number,\#} jaar geleden
-yearsAgo = {0,number,\#} jaren geleden
+secondsAgo = {0,number,#} seconden geleden
+minuteAgo = {0,number,#} minuut geleden
+minutesAgo = {0,number,#} minuten geleden
+hourAgo = {0,number,#} uur geleden
+hoursAgo = {0,number,#} uren geleden
+dayAgo = {0,number,#} dag geleden
+daysAgo = {0,number,#} dagen geleden
+monthAgo = {0,number,#} maand geleden
+monthsAgo = {0,number,#} maanden geleden
+yearAgo = {0,number,#} jaar geleden
+yearsAgo = {0,number,#} jaren geleden
 settings.languages.restart.message = Je hebt de taal veranderd. Dit vereist een herstart.
 settings.languages.restart = Herstarten
 settings.languages.system = Automatisch
@@ -432,6 +446,7 @@ settings.chat.previewImages = Voorbeeld afbeelding URLs bij overgaan met muis
 settings.chat.colors = Kleuren
 # Fuzzy
 settings.chat.timeFormat = Formaat tijd
+# Fuzzy
 settings.chat.colorMode.default = Standaard\: Gebruik standaard kleuren voor alle spelers
 settings.chat.colorMode.custom = Aangepast\: Sta aangepaste kleuren voor specifieke spelers toe
 settings.chat.colorMode.random = Willekeurig\: Iedere speler heeft een uniek, willekeurige kleur
@@ -467,7 +482,7 @@ settings.notifications.friendOnline = Vriend online
 settings.notifications.friendJoinsGame = Vriend verbind met het spel
 settings.notifications.friendPlaysGame = Vriend speelt spel
 settings.notifications.friendOffline = Vriend offline
-settings.screenFormat = Beeld {0,number,\#}
+settings.screenFormat = Beeld {0,number,#}
 settings.account = Account
 settings.account.changePassword = Verander paswoord
 settings.account.currentPassword = Huidig paswoord
@@ -512,7 +527,7 @@ review.starsTip.four = Ik vind het leuk
 review.starsTip.five = Ik vind het heel erg leuk
 reviews.title = Beoordelingen
 reviews.myReview = Mijn beoordeling
-reviews.totalReviewers = {0,number,\#} totaal
+reviews.totalReviewers = {0,number,#} totaal
 reviews.create = Schrijf een beoordeling
 reviewScore.five = 5
 reviewScore.four = 4
@@ -552,6 +567,7 @@ mod.uploadedDateTime = Upgeload
 mod.updatedDateTime = Aangepast
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Type
 mod.ranked = Geclassificeerd
 mod.filename = Bestandsnaam
@@ -574,6 +590,7 @@ search.sort = Gesorteerd bij
 vault.mods.searchError = Mods kunen niet geladen worden
 noDateAvailable = Datum niet beschikbaar
 map.created = Gemaakt op\:
+# Fuzzy
 modType.ui = Gebruikersomgeving mod
 modType.sim = Simumatie mod
 menu.connect = Verbinden
@@ -623,7 +640,7 @@ tournament.noStartingDate = Geen startdatum ingesteld
 tournament.noCompletionDate = Nog geen datum
 loading = Laden ...
 updater.readingFileList = Lezen bestanden lijst
-secondAgo = {0,number,\#} seconden geleden
+secondAgo = {0,number,#} seconden geleden
 vault.maps.searchError = Mappen kunnen niet geladen worden.
 settings.notifications.displayNotification = Laat notificatie zien
 replay.notFoundTitle = Kan het spel niet vinden.
@@ -647,10 +664,11 @@ settings.appearance.chooseImage = Kies een afbeelding
 settings.general.theme.useNoImage = Geen afbeelding
 query.notContains = Bevat niet
 coop.unknownMission = Onbekende missie
-game.couldNotJoin = Kon niet deelnemen aan het spel met id id ''{0}'''.
+# Fuzzy
+game.couldNotJoin = Kon niet deelnemen aan het spel met id id ''''{0}''''''.
 discord.disallowJoins = Spelers niet toestaan om deel te nemen via Discord
 # Fuzzy
-replay.couldNotOpen = Replay met id ''{0}''', kon niet worden geopend.
+replay.couldNotOpen = Replay met id ''''{0}'''''', kon niet worden geopend.
 view.showSidePane = Toon details
 view.hideSidePane = Verberg details
 # Fuzzy
@@ -660,12 +678,13 @@ menu.revealGamePrefsFile = Toon game.prefs file
 ranked1v1.queuePopTimer = Overeenkomend in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Genereer map
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Map wordt gegenereerd...
 game.mapGeneration.notification.message = Wacht alstublieft. (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Het genereren van de map is mislukt.
 game.mapGeneration.failed.message = De opgevraagde map kon niet worden gegenereerd, omdat het proces van kaartgeneratie niet binnen de time-out werd beëindigd. Proces wordt stopgezet.
 game.mapGeneration.downloadGenerator.title = Bezig met downloaden van map generator versie {0}
+# Fuzzy
 game.mapGeneration.generateMap.title = Map genereren... (Versie\: {0}, Seed\: {1})
 login.environment = Omgeving
 login.button.downloadUpdate = Laatste versie downloaden
@@ -676,7 +695,7 @@ login.ircServerHost = IRC server host
 login.withEmailWarning = Log alstublieft in met uw gebruikersnaam en niet uw email.
 vault.next = Volgende
 vault.previous = Vorige
-vault.currentPage = Pagina\: {0,number,\#}
+vault.currentPage = Pagina\: {0,number,#}
 mapVault.recommended = M&M Team Top Keuzes
 settings.appearance.useNone = Geen afbeelding gebruiken
 settings.chat.addAutoJoinChannel = Kanaal toevoegen
@@ -725,6 +744,7 @@ tutorial.tutorial = Handleidingen
 tutorial.launch = Start Handleidingen
 tutorial.mapName = Map naam\: {0}
 tutorial.launchFailed = Starten van handleidingen mislukt
+# Fuzzy
 mapVault.installationFailed = Map installatie mislukt voor map "{0}" met bericht "{1}"
 tutorial.loading = Handleidingen laden
 tutorial.noneAvailable = Er zijn momenteel geen handleidingen
@@ -808,7 +828,8 @@ mod.manager.simModsTooltip = SIM modificaties zijn modificaties die het spel aan
 mod.manager.uiModsTooltip = UI modificaties zijn modificaties hoe jij het spel ziet.
 modVault.modManager = Manage actieve modificaties.
 modVault.manageMods = Manage actieve modificaties
-theme.needsRestart.message = Het thema wijzigen in '' {0} '', kan een herstart geven.
+# Fuzzy
+theme.needsRestart.message = Het thema wijzigen in '''' {0} '''', kan een herstart geven.
 theme.needsRestart.quit = Verlaat
 vault.loading = Laden...
 vault.displayQuery = Toon de zoekopdracht.
