Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -1,7 +1,7 @@
 yes = Oui
 no = Non
 # i need more info on this one
-percentage = {0,number,\#.\#}%
+percentage = {0,number,#.#}%
 report = Signaler
 errorDetails = Détails de l'erreur
 cancel = Annuler
@@ -58,7 +58,7 @@ coop.leaderboard.time = Temps
 coop.leaderboard.replay = Rediffusion
 coop.leaderboard.allPlayers = Tous
 coop.leaderboard.singlePlayer = Solo
-coop.leaderboard.numberOfPlayersFormat = {0,number,\#} joueurs
+coop.leaderboard.numberOfPlayersFormat = {0,number,#} joueurs
 coop.leaderboard.couldNotLoad = Impossible de charger le classement co-op
 coop.couldNotLoad = Impossible de charger les missions co-op {0}
 ranked1v1.players = Joueurs (ayant joué {0} parties min.)
@@ -81,10 +81,10 @@ ranked1v1.ratingHint.high = Expert \: n'hésitez pas à aider d'autres joueurs m
 ranked1v1.ratingHint.top = Félicitations\! Vous faites partie des meilleurs. Partagez votre connaissance avec d'autres joueurs.
 ranked1v1.gamesPlayed = Parties jouées
 ranked1v1.ranking = Votre rang
-ranked1v1.rankingOutOf = sur {0,number,\#} joueurs
+ranked1v1.rankingOutOf = sur {0,number,#} joueurs
 ranked1v1.searching = Recherche d'un adversaire…
 ranked1v1.winLossRation = Ratio V/D
-ranked1v1.rankingFormat = \#{0,number,\#}
+ranked1v1.rankingFormat = \#{0,number,#}
 ranked1v1.notification.title = Partie classée 1c1 disponible
 ranked1v1.notification.message = Cliquez ici pour ouvrir l'onglet 1c1
 statusBar.chatConnected = Chat connecté
@@ -127,7 +127,7 @@ chat.sendMessageTask.title = Envoyer un message…
 chat.sendActionTask.title = Exécuter une action…
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Envoyer une image…
-chat.userCount = {0,number,\#} joueurs
+chat.userCount = {0,number,#} joueurs
 chat.mapName = Carte
 chat.filter.filter = Filtre
 chat.filter.prompt = Rechercher
@@ -147,12 +147,12 @@ chat.privateMessage.playerLeft = {0} est hors ligne
 chat.privateMessage.playerReconnect = {0} est en ligne de nouveau
 chat.privateMessage.globalRating = Niveau global
 chat.privateMessage.ladder1v1Rating = Niveau 1c1
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Parties jouées
 chat.privateMessage.currentlyPlaying = En jeu
 chat.privateMessage.game.players = Joueurs
 chat.privateMessage.achievements.unlocked = Succès débloqués
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Créer partie
 games.create.minRating = Min.
 games.create.maxRating = Max.
@@ -182,19 +182,19 @@ game.title = Titre
 game.players = Joueurs
 game.map = Carte
 game.rating = Niveau
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Niveau hors limites
-game.joinGameRatingConfirmation.text = Cette partie est destinée à des joueurs dont le classement est compris entre {0,number,\#} et {1,number,\#}. Votre classement est de {2,number,\#}.\n\nÊtes vous sûr de vouloir rejoindre cette partie ?
+game.joinGameRatingConfirmation.text = Cette partie est destinée à des joueurs dont le classement est compris entre {0,number,#} et {1,number,#}. Votre classement est de {2,number,#}.\n\nÊtes vous sûr de vouloir rejoindre cette partie ?
 game.type = Type
 game.mods = Mods
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} joueurs
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} joueurs
 game.join = Rejoindre
 game.cancel = Annuler
 game.host = Héberger
-game.tooltip.teamTitle = Équipe {0} ({1,number,\#})
+game.tooltip.teamTitle = Équipe {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Pas d'équipe
 game.tooltip.observers = Spectateurs
 game.join.passwordPrompt = Entrez le mot de passe
@@ -204,7 +204,7 @@ game.full = Partie pleine
 # I would need context for that one please
 game.full.action = Afficher la partie
 # Fuzzy
-game.mods.twoAndMore = {0} et {1,number,\#} autres
+game.mods.twoAndMore = {0} et {1,number,#} autres
 game.gameStatus = État de la partie
 game.gameStatus.playing = En jeu
 game.gameStatus.lobby = En attente
@@ -221,10 +221,15 @@ game.endTime = Fin
 game.validity = Validité
 game.victoryCondition = Condition de victoire
 game.player.id = ID
+# Fuzzy
 game.player.username = Nom
+# Fuzzy
 game.player.faction = Faction
+# Fuzzy
 game.player.team = Équipe
+# Fuzzy
 game.player.startSpot = Emplacement de départ
+# Fuzzy
 game.player.score = Score
 game.host.id = ID Hôte
 game.host.username = Nom de l'hôte
@@ -233,6 +238,7 @@ game.map.width = Largeur de la carte (px)
 game.map.version = Version de la carte
 game.map.folderName = Dossier de la carte
 game.map.isRanked = Carte classée
+# Fuzzy
 game.map.displayName = Nom de la carte
 game.options = Options
 game.optionKey = Paramètre
@@ -248,7 +254,7 @@ game.watch = Observer
 game.watchButtonFormat = Observer ({0})
 game.watchDelayedFormat = Observable dans  {0}
 game.replayFileMissing = Fichier de rediffusion manquant
-game.idFormat = \ \#{0,number,\#}
+game.idFormat = \ \#{0,number,#}
 game.lineUp = Composition
 featuredMod.displayName = Nom du mod
 featuredMod.technicalName = Abrév. mod
@@ -264,8 +270,10 @@ login.button.cancel = Annuler
 login.progress.message = Connexion en cours…
 vault.maps = Cartes
 vault.mods = Mods
+# Fuzzy
 vault.onlineReplays = Rediffusions en ligne
 vault.localReplays = Rediffusions locales
+# Fuzzy
 vault.liveReplays = Parties en cours
 vault.replays.loading = Chargement des rediffusions…
 vault.replays.newest = Plus récent
@@ -277,7 +285,9 @@ vault.more = Plus…
 modVault.newestMods = Plus récent
 modVault.install = Installer
 modVault.uninstall = Désinstaller
+# Fuzzy
 modVault.installationFailed = Impossible de charger {0} \: {1}
+# Fuzzy
 modVault.couldNotDeleteMod = Impossible de supprimer {0} \: {1}
 modVault.loadingMods = Chargement des mods…
 modVault.upload.chooseDirectory = Sélectionner l'emplacement du mod
@@ -289,7 +299,7 @@ modVault.upload.modUid = UID
 modVault.upload.uploadNow = Envoyer
 modVault.upload.uploading = Envoi en cours…
 modVault.upload.complete = Envoi terminé
-modVault.upload.failed = Impossible d'envoyer le mod. Le serveur a renvoyé l'erreur suivante \:\n\n{0}
+modVault.upload.failed = Impossible d''envoyer le mod. Le serveur a renvoyé l''erreur suivante \:\n\n{0}
 modVault.upload.retry = Réessayer
 modVault.upload.compressing = Compression du mod…
 mapVault.upload.title = Envoyer une carte
@@ -302,13 +312,13 @@ mapVault.upload.uploading = Envoi en cours
 mapVault.upload.compressing = Compression en cours
 mapVault.upload.complete = Envoi terminé
 mapVault.upload.complete.hint = AVERTISSEMENT\: Le serveur ayant renommé les fichiers, il vous est fortement recommandé de supprimer votre carte de votre dossier "maps" et de l'installer à nouveau depuis le Vault.
-mapVault.upload.failed = Impossible d'envoyer la carte. Le serveur a renvoyé l'erreur suivante \:\n\n{0}
+mapVault.upload.failed = Impossible d''envoyer la carte. Le serveur a renvoyé l''erreur suivante \:\n\n{0}
 mapVault.upload.mapSize = Taille
 mapVault.upload.players = Joueurs
 # Is it a button "Choose directory" ? Or is it a message "Please choose the appropriate directory" ?
 mapVault.upload.chooseDirectory = Sélectionnez l'emplacement des cartes
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Je confirme que cette carte est correctement équilibrée et ne contient pas de code prohibé. Je suis conscient que de la violation de ces règles résultera un bannissement. Décocher cette case rend la map non-classée.
 mapVault.upload.retry = Réessayer
 mapVault.loadingMaps = Chargement de la carte
@@ -333,12 +343,14 @@ map.ranked = Classée
 map.reviews = Avis
 map.updated = Mise à jour
 map.maxPlayers = Joueurs max.
+# Fuzzy
 map.width = Largeur (px)
+# Fuzzy
 map.height = Hauteur (px)
 map.uploadedDateTime = Envoyée le
 map.updatedDateTime = Mise à jour le
 mapPreview.name = Nom \: {0}
-mapPreview.size = {0,number,\#} x {1,number,\#}
+mapPreview.size = {0,number,#} x {1,number,#}
 mapPreview.loadFailure.message = Impossible de charger la prévisualisation
 replays.loadingOnlineTask.title = Chargement des rediffusions en ligne
 replays.loadingOnlineTask.failed = Impossible de charger les rediffusions en ligne.
@@ -392,45 +404,47 @@ userInfo.ratingOverTime = Évolution du niveau
 userInfo.ratingHistory.1v1 = 1c1
 userInfo.ratingHistory.global = Global
 userInfo.achievements = Succès
-userInfo.tooltipFormat = {0} ({1,number,\#})
-userInfo.ratingFormat = Niveau global \: {0,number,\#}\nNiveau 1c1 \: {1,number,\#}
+userInfo.tooltipFormat = {0} ({1,number,#})
+userInfo.ratingFormat = Niveau global \: {0,number,#}\nNiveau 1c1 \: {1,number,#}
 user.status.hosting = Héberge \: {0}
 user.status.waiting = En attente \: {0}
 user.status.playing = En jeu \: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Plus récent
 achievements.loading = Chargement des succès
-achievements.unlocked = Débloqué ({0,number,\#})
+achievements.unlocked = Débloqué ({0,number,#})
 # what does "open" mean in this context ?
-achievements.locked = Verrouillé ({0,number,\#})
-replayServer.listeningFailed = Impossible de démarrer le serveur de rediffusion (Port {0,number,\#})
+achievements.locked = Verrouillé ({0,number,#})
+replayServer.listeningFailed = Impossible de démarrer le serveur de rediffusion (Port {0,number,#})
 replayServer.retry = Réessayer
 replayServer.unreachable = Impossible de joindre le serveur de rediffusion. La partie ne sera pas enregistrée.
+# Fuzzy
 corruptedMods.notification = Impossible de charger le mod {0} (Fichier corrompu)
 corruptedMods.show = Afficher
 corruptedReplayFiles.notification = Un ou plusieurs fichiers de rediffusion corrompus ont été trouvés et déplacés vers un autre dossier.
 corruptedReplayFiles.show = Afficher
+# Fuzzy
 mapNotFound = Impossible de trouver la carte "{0}" sur le serveur ou en local.
-replayCouldNotBeStarted = Impossible de démarrer la rediffusion {0,number,\#}. Détails ci-dessous.
+replayCouldNotBeStarted = Impossible de démarrer la rediffusion {0,number,#}. Détails ci-dessous.
 liveReplayCouldNotBeStarted = Impossible d'observer la partie en cours. Détails ci-dessous.
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {1,number,\#}s
-duration.hourMinutes = {0,number,\#}h {1,number,\#}min
+duration.seconds = {0,number,#}s
+duration.minutesSeconds = {0,number,#}min {1,number,#}s
+duration.hourMinutes = {0,number,#}h {1,number,#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = u0020contreu0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = ,u0020
-secondsAgo = Il y a {0,number,\#} secondes
-minuteAgo = Il y a {0,number,\#} minute
-minutesAgo = Il y a {0,number,\#} minutes
-hourAgo = Il y a {0,number,\#} heure
-hoursAgo = Il y a {0,number,\#} heures
-dayAgo = Il y a {0,number,\#} jour
-daysAgo = Il y a {0,number,\#} jours
-monthAgo = Il y a {0,number,\#} mois
-monthsAgo = Il y a {0,number,\#} mois
-yearAgo = Il y a {0,number,\#} an
-yearsAgo = Il y a {0,number,\#} ans
+secondsAgo = Il y a {0,number,#} secondes
+minuteAgo = Il y a {0,number,#} minute
+minutesAgo = Il y a {0,number,#} minutes
+hourAgo = Il y a {0,number,#} heure
+hoursAgo = Il y a {0,number,#} heures
+dayAgo = Il y a {0,number,#} jour
+daysAgo = Il y a {0,number,#} jours
+monthAgo = Il y a {0,number,#} mois
+monthsAgo = Il y a {0,number,#} mois
+yearAgo = Il y a {0,number,#} an
+yearsAgo = Il y a {0,number,#} ans
 settings.languages.restart.message = Veuillez redémarrer le client pour confirmer le changement de langue.
 settings.languages.restart = Redémarrer
 settings.languages.system = Auto
@@ -448,6 +462,7 @@ settings.chat.previewImages = Prévisualisation de l'URL des images
 settings.chat.colors = Couleurs
 # Fuzzy
 settings.chat.timeFormat = Choix du système horaire
+# Fuzzy
 settings.chat.colorMode.default = Défaut \: Couleurs par défaut pour tous les utilisateurs
 settings.chat.colorMode.custom = Personnalisé \: Couleurs personnalisées pour certains utilisateurs
 settings.chat.colorMode.random = Aléatoire \: Chaque utilisateur a une couleur aléatoire spécifique.
@@ -484,7 +499,7 @@ settings.notifications.friendOnline = Ami connecté
 settings.notifications.friendJoinsGame = Ami rejoins une partie
 settings.notifications.friendPlaysGame = Ami est en jeu
 settings.notifications.friendOffline = Ami déconnecté
-settings.screenFormat = Écran {0,number,\#}
+settings.screenFormat = Écran {0,number,#}
 settings.account = Compte
 settings.account.changePassword = Changer le mot de passe
 settings.account.currentPassword = Mot de passe actuel
@@ -529,7 +544,7 @@ review.starsTip.four = Bien
 review.starsTip.five = Super\!
 reviews.title = Avis
 reviews.myReview = Mon avis
-reviews.totalReviewers = {0,number,\#}
+reviews.totalReviewers = {0,number,#}
 reviews.create = Donner un avis\n
 reviewScore.five = 5
 reviewScore.four = 4
@@ -569,6 +584,7 @@ mod.uploadedDateTime = Envoyé
 mod.updatedDateTime = Mis à jour
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Type
 mod.ranked = Classé
 mod.filename = Fichier
@@ -591,6 +607,7 @@ search.sort = Classer par
 vault.mods.searchError = Impossible de charger les Mods
 noDateAvailable = Date non disponible.
 map.created = Créée \:
+# Fuzzy
 modType.ui = Mod d'interface
 modType.sim = Mod de jeu
 menu.connect = Connection
@@ -640,7 +657,7 @@ tournament.noStartingDate = Pas de date de début
 tournament.noCompletionDate = Pas de date de fin
 loading = Chargement...
 updater.readingFileList = Lecture de la liste des fichiers
-secondAgo = il y a {0,number,\#} secondes
+secondAgo = il y a {0,number,#} secondes
 vault.maps.searchError = Impossible de charger les cartes
 settings.notifications.displayNotification = Afficher les notifications
 replay.notFoundTitle = Partie introuvable
@@ -665,22 +682,24 @@ settings.appearance.chooseImage = Choisir l'image
 settings.general.theme.useNoImage = Pas d'image
 query.notContains = ne contient pas
 coop.unknownMission = Mission inconnue
+# Fuzzy
 game.couldNotJoin = Impossible de rejoindre "{0}"
 discord.disallowJoins = Empêcher de rejoindre par discord
 # Fuzzy
-replay.couldNotOpen = La rediffusion {0} n'a pas pu être chargée
+replay.couldNotOpen = La rediffusion {0} n''a pas pu être chargée
 view.showSidePane = Montrer les détails
 view.hideSidePane = Cacher les détails
 menu.revealReplayFolder = Ouvrir le dossier des rediffusions
 menu.revealGamePrefsFile = Ouvrir le fichier des préférences du jeu
 ranked1v1.queuePopTimer = Correspondance entre {0,number,0}\:{1,number,00}
 game.create.generatedMap = Générer une nouvelle carte
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Génération de la carte...
 game.mapGeneration.notification.message = Veuillez patienter. (Version\: {0}, seed\: {1})
 game.mapGeneration.failed.title = La génération de carte a échouée
 game.mapGeneration.failed.message = La carte demandée n'a pas pu être générée, le processus de génération de carte ne s'est pas terminé dans le délai imparti. Processus de fermeture.
 game.mapGeneration.downloadGenerator.title = Téléchargement du générateur de carte version {0}\n
+# Fuzzy
 game.mapGeneration.generateMap.title = Génération de la carte en cours... (Version\: {0}, Seed\: {1})
 login.environment = Environnement
 login.button.downloadUpdate = Télécharger la dernière version
@@ -691,7 +710,7 @@ login.ircServerHost = Hôte du serveur IRC
 login.withEmailWarning = Merci de vous identifier avec votre nom d'utilisateur au lieu de votre email
 vault.next = Suivant
 vault.previous = Précédent
-vault.currentPage = Page\: {0,number,\#}
+vault.currentPage = Page\: {0,number,#}
 mapVault.recommended = Meilleurs choix de l'équipe M&M
 settings.appearance.useNone = N'utilisez aucune image
 settings.chat.addAutoJoinChannel = Ajouter un canal
@@ -732,14 +751,15 @@ chat.userContext.kickLobby = Ejecté du lobby…
 moderator.ban.reason = raison du ban
 moderator.ban.duration = durée du bannissement
 moderator.ban.success = éjecté et banni avec succès
-moderator.ban.user = Bannir l'utilisateur "{0}"\:
+moderator.ban.user = Bannir l''utilisateur "{0}"\:
 main.tutorials = Tutoriels
 tutorial.category = Catégorie
 tutorial.tutorial = Tutoriels
 tutorial.launch = Lancer les tutoriels
 tutorial.mapName = Nom de la Carte\: {0}
 tutorial.launchFailed = Le lancement du tutoriel à échoué
-mapVault.installationFailed = L'installation de la carte a échoué pour la carte '' {0} '' avec le message '' {1} ''
+# Fuzzy
+mapVault.installationFailed = L''installation de la carte a échoué pour la carte '''' {0} '''' avec le message '''' {1} ''''
 tutorial.loading = Chargement du tutoriel
 tutorial.noneAvailable = Il n'y a actuellement pas de tutoriels
 clientUpdateAvailable.prereleaseNotification = La prerelease {0} est disponible ({1})  
@@ -823,7 +843,7 @@ vault.replays.copyReplayPath = Copier l'emplacement de l'enregistrement
 game.generateMap.less = Moins
 game.generateMap.more = Plus
 discord.join = Rejoindre FAF sur Discord
-game.reasonNotValid = La partie n'a pas été cotée. Raison\: {0}
+game.reasonNotValid = La partie n''a pas été cotée. Raison\: {0}
 game.reasonNotValid.desync = Trop de désynchronisations
 game.reasonNotValid.wrongCondition = Conditions de victoire incorrectes
 game.reasonNotValid.fogOfWar = Pas de brouillard de guerre
