--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -1,6 +1,6 @@
 yes = Ja
 no = Nein
-percentage = {0,number,\#.\#}%
+percentage = {0,number,#.#}%
 report = Melden
 errorDetails = Fehlerdetails
 cancel = Abbrechen
@@ -51,7 +51,7 @@ coop.leaderboard.time = Zeit
 coop.leaderboard.replay = Replay
 coop.leaderboard.allPlayers = Alle
 coop.leaderboard.singlePlayer = 1 Spieler
-coop.leaderboard.numberOfPlayersFormat = {0,number,\#} Spieler
+coop.leaderboard.numberOfPlayersFormat = {0,number,#} Spieler
 coop.leaderboard.couldNotLoad = Co-Op Rangliste konnte nicht geladen werden.
 coop.couldNotLoad = Co-Op Missionen konnten nicht geladen werden\: {0}
 ranked1v1.players = Spieler (mit mindestens {0} Spielen)
@@ -71,10 +71,10 @@ ranked1v1.ratingHint.high = Dein Rating ist hoch. Warum hilfst du nicht anderen,
 ranked1v1.ratingHint.top = Glückwunsch\! Du bist ein Spitzenspieler. Teile dein Wissen.
 ranked1v1.gamesPlayed = Gespielte Spiele
 ranked1v1.ranking = Dein Rang
-ranked1v1.rankingOutOf = von {0,number,\#} Spielern
+ranked1v1.rankingOutOf = von {0,number,#} Spielern
 ranked1v1.searching = Suche nach Gegner…
 ranked1v1.winLossRation = Gewonnen/Verloren Verhältnis
-ranked1v1.rankingFormat = \#{0,number,\#}
+ranked1v1.rankingFormat = \#{0,number,#}
 ranked1v1.notification.title = 1v1 Spiel verfügbar
 ranked1v1.notification.message = Klicke hier, um die 1v1 Ansicht zu öffnen
 statusBar.chatConnected = Chat verbunden
@@ -115,7 +115,7 @@ chat.sendMessageTask.title = Sende Chat Nachricht…
 chat.sendActionTask.title = Sende Chat Aktion…
 chat.clanTagFormat = [{0}]
 chat.imageUploadTask.title = Lade Bild hoch…
-chat.userCount = {0,number,\#} Benutzer (Tippe um zu suchen)
+chat.userCount = {0,number,#} Benutzer (Tippe um zu suchen)
 chat.mapName = Kartenname\: {0}
 chat.filter.filter = Filter
 chat.filter.prompt = Suche im Kanal
@@ -134,12 +134,12 @@ chat.privateMessage.playerLeft = {0} ist offline
 chat.privateMessage.playerReconnect = {0} ist wieder online
 chat.privateMessage.globalRating = Globales Rating
 chat.privateMessage.ladder1v1Rating = 1v1 Rating
-chat.privateMessage.ratingFormat = {0,number,\#}
+chat.privateMessage.ratingFormat = {0,number,#}
 chat.privateMessage.gamesPlayed = Gespielte Spiele
 chat.privateMessage.currentlyPlaying = Spielt gerade
 chat.privateMessage.game.players = Spieler
 chat.privateMessage.achievements.unlocked = Errungenschaft freigespielt
-chat.privateMessage.achievements.unlockedFormat = {0,number,\#}/{1,number,\#}
+chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Eröffne ein Spiel
 games.create.minRating = Min.
 games.create.maxRating = Max.
@@ -168,19 +168,19 @@ game.title = Titel
 game.players = Spieler
 game.map = Karte
 game.rating = Rating
-game.ratingFormat.minOnly = >\={0,number,\#}
-game.ratingFormat.maxOnly = <\={0,number,\#}
-game.ratingFormat.minMax = {0,number,\#} - {1,number,\#}
+game.ratingFormat.minOnly = >\={0,number,#}
+game.ratingFormat.maxOnly = <\={0,number,#}
+game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Rating nicht im definierten Bereich
-game.joinGameRatingConfirmation.text = Dieses Spiel ist für Spieler mit einem Rating zwischen {0,number,\#} und {1,number,\#}, dein Rating ist allerdings {2,number,\#}.\n\nWillst du dennoch beitreten?
+game.joinGameRatingConfirmation.text = Dieses Spiel ist für Spieler mit einem Rating zwischen {0,number,#} und {1,number,#}, dein Rating ist allerdings {2,number,#}.\n\nWillst du dennoch beitreten?
 game.type = Typ
 game.mods = Mods
-game.players.format = {0,number,\#}/{1,number,\#}
-game.detail.players.format = {0,number,\#}/{1,number,\#} Spieler
+game.players.format = {0,number,#}/{1,number,#}
+game.detail.players.format = {0,number,#}/{1,number,#} Spieler
 game.join = Beitreten
 game.cancel = Abbrechen
 game.host = Host
-game.tooltip.teamTitle = Team {0} ({1,number,\#})
+game.tooltip.teamTitle = Team {0} ({1,number,#})
 game.tooltip.teamTitleNoTeam = Kein Team
 game.tooltip.observers = Zuschauer
 game.join.passwordPrompt = Passwort eingeben
@@ -189,7 +189,7 @@ game.start.couldNotStart = Das Spiel konnte nicht gestartet werden. Siehe Fehler
 game.full = Spiel ist voll
 game.full.action = Klicke um das Spiel zu öffnen
 # Fuzzy
-game.mods.twoAndMore = {0} und {1,number,\#} weitere
+game.mods.twoAndMore = {0} und {1,number,#} weitere
 game.gameStatus = Spielstatus
 # What does this mean exactly? Game is in progress?
 game.gameStatus.playing = Spielt
@@ -207,10 +207,15 @@ game.endTime = Endzeit
 game.validity = Gültigkeit
 game.victoryCondition = Siegesbedingung
 game.player.id = Spieler-ID
+# Fuzzy
 game.player.username = Name des Spielers
+# Fuzzy
 game.player.faction = Fraktion des Spielers
+# Fuzzy
 game.player.team = Team des Spielers
+# Fuzzy
 game.player.startSpot = Startposition des Spielers
+# Fuzzy
 game.player.score = Punktezahl des Spielers
 game.host.id = Spieler-ID des Hosts
 game.host.username = Name des Hosts
@@ -219,6 +224,7 @@ game.map.width = Kartenbreite
 game.map.version = Kartenversion
 game.map.folderName = Name des Kartenverzeichnisses
 game.map.isRanked = Karte ist gewertet
+# Fuzzy
 game.map.displayName = Kartenname
 game.options = Spieloptionen
 game.optionKey = Option
@@ -234,7 +240,7 @@ game.watch = Zuschauen
 game.watchButtonFormat = Zuschauen ({0})
 game.watchDelayedFormat = Verfügbar in {0}
 game.replayFileMissing = Replay-Datei fehlt
-game.idFormat = \#{0,number,\#}
+game.idFormat = \#{0,number,#}
 game.lineUp = Aufstellung
 featuredMod.displayName = Name der Spiel-Mod
 featuredMod.technicalName = Kurzname der Spiel-Mod
@@ -250,8 +256,10 @@ login.button.cancel = Abbrechen
 login.progress.message = Anmelden…
 vault.maps = Karten
 vault.mods = Mods
+# Fuzzy
 vault.onlineReplays = Online Replays
 vault.localReplays = Lokale Replays
+# Fuzzy
 vault.liveReplays = Live Replays
 vault.replays.loading = Lade Replays…
 vault.replays.newest = Am neuesten
@@ -263,8 +271,10 @@ vault.more = More…
 modVault.newestMods = Neuste Mods
 modVault.install = Installieren
 modVault.uninstall = Deinstallieren
-modVault.installationFailed = Mod ''{0}'' konnte nicht installiert werden\: {1}
-modVault.couldNotDeleteMod = Mod ''{0}'' konnte nicht gelöscht werden\: {1}
+# Fuzzy
+modVault.installationFailed = Mod ''''{0}'''' konnte nicht installiert werden\: {1}
+# Fuzzy
+modVault.couldNotDeleteMod = Mod ''''{0}'''' konnte nicht gelöscht werden\: {1}
 modVault.loadingMods = Lade Mods…
 modVault.upload.chooseDirectory = Wähle den Speicherort der Mod
 modVault.upload = Mod hochladen…
@@ -292,8 +302,8 @@ mapVault.upload.failed = Karte konnte nicht hochgeladen werden. Der Server melde
 mapVault.upload.mapSize = Größe
 mapVault.upload.players = Spieler
 mapVault.upload.chooseDirectory = Wähle den Speicherort der Karte
-mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
-mapVault.upload.playersFormat = {0,number,\#}
+mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
+mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Ich bestätige, dass die Karte ausgeglichen ist und keinen verbotenen Code enthält. Ich bin mir bewusst, dass ein Verstoß einen Bann zur Folge hat. Beim Abwählen dieser Option werden Spiele auf dieser Karte nicht bewertet.
 mapVault.upload.retry = Erneut versuchen
 mapVault.loadingMaps = Lade Karten…
@@ -317,13 +327,15 @@ map.ranked = Gewertet
 map.reviews = Rezensionen
 map.updated = Aktualisiert
 map.maxPlayers = Max. Spieler
+# Fuzzy
 map.width = Breite
+# Fuzzy
 map.height = Höhe
 # "Hinzugefügt" doesn't mean "Uploaded" but "Added".
 map.uploadedDateTime = Hochgeladen
 map.updatedDateTime = Aktualisiert
 mapPreview.name = Kartenname\: {0}
-mapPreview.size = {0,number,\#}km x {1,number,\#}km
+mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Kartenvorschau konnte nicht geladen werden
 replays.loadingOnlineTask.title = Lade Online-Replays…
 replays.loadingOnlineTask.failed = Online-Replays konnten nicht geladen werden.
@@ -375,44 +387,46 @@ userInfo.ratingOverTime = Rating über Zeit
 userInfo.ratingHistory.1v1 = 1v1
 userInfo.ratingHistory.global = Global
 userInfo.achievements = Errungenschaften
-userInfo.tooltipFormat = {0} ({1,number,\#})
-userInfo.ratingFormat = Globales Rating\: {0,number,\#}\nRanglisten Rating\: {1,number,\#}
+userInfo.tooltipFormat = {0} ({1,number,#})
+userInfo.ratingFormat = Globales Rating\: {0,number,#}\nRanglisten Rating\: {1,number,#}
 user.status.hosting = Hostet\: {0}
 user.status.waiting = Wartet in\: {0}
 user.status.playing = Spielt\: {0}
-achievement.stepsFormat = {0,number,\#}/{1,number,\#}
+achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Neuste Errungenschaften
 achievements.loading = Lade Errungenschaften…
-achievements.unlocked = Freigeschaltet ({0,number,\#})
-achievements.locked = Offen ({0,number,\#})
-replayServer.listeningFailed = Replay-Server konnte nicht auf Port {0,number,\#} gestartet werden
+achievements.unlocked = Freigeschaltet ({0,number,#})
+achievements.locked = Offen ({0,number,#})
+replayServer.listeningFailed = Replay-Server konnte nicht auf Port {0,number,#} gestartet werden
 replayServer.retry = Erneut versuchen
 replayServer.unreachable = Replay-Server ist nicht erreichbar, Spiel kann nicht aufgezeichnet werden
+# Fuzzy
 corruptedMods.notification = Mod ist beschädigt und konnte nicht geladen werden\: {0}.
 corruptedMods.show = Anzeigen
 corruptedReplayFiles.notification = Es gibt beschädigte Replays auf deiner Festplatte. Diese wurden für dich in ein anderes Verzeichnis verschoben.
 corruptedReplayFiles.show = Anzeigen
-mapNotFound = Die Karte ''{0}'' konnte weder auf dem Server noch auf diesem Computer gefunden werden.
-replayCouldNotBeStarted = Replay {0,number,\#} konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
+# Fuzzy
+mapNotFound = Die Karte ''''{0}'''' konnte weder auf dem Server noch auf diesem Computer gefunden werden.
+replayCouldNotBeStarted = Replay {0,number,#} konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
 liveReplayCouldNotBeStarted = Live-Replay konnte nicht gestartet werden. Siehe unten stehende Fehlermeldung.
-duration.seconds = {0,number,\#}s
-duration.minutesSeconds = {0,number,\#}min {1,number,\#}s
-duration.hourMinutes = {0,number,\#}h {1,number,\#}min
+duration.seconds = {0,number,#}s
+duration.minutesSeconds = {0,number,#}min {1,number,#}s
+duration.hourMinutes = {0,number,#}h {1,number,#}min
 # suppress inspection "TrailingSpacesInProperty"
 vsSeparator = \ vs 
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = , 
-secondsAgo = Vor {0,number,\#} Sekunden
-minuteAgo = Vor {0,number,\#} Minute
-minutesAgo = Vor {0,number,\#} Minuten
-hourAgo = Vor {0,number,\#} Stunde
-hoursAgo = Vor {0,number,\#} Stunden
-dayAgo = Vor {0,number,\#} Tag
-daysAgo = Vor {0,number,\#} Tagen
-monthAgo = Vor {0,number,\#} Monat
-monthsAgo = Vor {0,number,\#} Monaten
-yearAgo = Vor {0,number,\#} Jahr
-yearsAgo = Vor {0,number,\#} Jahren
+secondsAgo = Vor {0,number,#} Sekunden
+minuteAgo = Vor {0,number,#} Minute
+minutesAgo = Vor {0,number,#} Minuten
+hourAgo = Vor {0,number,#} Stunde
+hoursAgo = Vor {0,number,#} Stunden
+dayAgo = Vor {0,number,#} Tag
+daysAgo = Vor {0,number,#} Tagen
+monthAgo = Vor {0,number,#} Monat
+monthsAgo = Vor {0,number,#} Monaten
+yearAgo = Vor {0,number,#} Jahr
+yearsAgo = Vor {0,number,#} Jahren
 settings.languages.restart.message = Du hast die Sprache geändert. Dies erfordert einen Neustart.
 # Message key and English translation say "Restart", German means "Close".
 # Fuzzy
@@ -432,6 +446,7 @@ settings.chat.previews = Vorschau
 settings.chat.previewImages = Vorschaubiler für Internet-Links anzeigen
 settings.chat.colors = Farben
 settings.chat.timeFormat = Zeitformat
+# Fuzzy
 settings.chat.colorMode.default = Standard\: Benutze Standardfarben für alle Benutzer
 settings.chat.colorMode.custom = Benutzerdefiniert\: Erlaube benutzerdefinierte Farben für spezifische Benutzer
 settings.chat.colorMode.random = Zufall\: Jeder Benutzer erhält eine eindeutige, zufällige Farbe
@@ -469,7 +484,7 @@ settings.notifications.friendOnline = Freund online
 settings.notifications.friendJoinsGame = Freund tritt Spiel bei
 settings.notifications.friendPlaysGame = Freund spielt Spiel
 settings.notifications.friendOffline = Freund offline
-settings.screenFormat = Bildschirm {0,number,\#}
+settings.screenFormat = Bildschirm {0,number,#}
 settings.account = Konto
 settings.account.changePassword = Passwort ändern
 settings.account.currentPassword = Aktuelles Passwort
@@ -514,7 +529,7 @@ review.starsTip.four = Gefiel mir
 review.starsTip.five = Gefiel mir sehr gut
 reviews.title = Rezensionen
 reviews.myReview = Meine Rezension
-reviews.totalReviewers = {0,number,\#} Total
+reviews.totalReviewers = {0,number,#} Total
 reviews.create = Rezension erfassen
 reviewScore.five = 5
 reviewScore.four = 4
@@ -556,6 +571,7 @@ mod.uploadedDateTime = Hinzugefügt
 mod.updatedDateTime = Aktualisiert
 mod.id = ID
 mod.uid = UID
+# Fuzzy
 mod.type = Typ
 mod.ranked = Gewertet
 mod.filename = Dateiname
@@ -578,6 +594,7 @@ search.sort = Sortiere nach
 vault.mods.searchError = Mods konnten nicht geladen werden
 noDateAvailable = Kein Datum verfügbar
 map.created = Erstellt\:
+# Fuzzy
 modType.ui = Ui Mod
 modType.sim = Sim Mod
 menu.connect = Verbinde
@@ -634,7 +651,7 @@ tournament.noStartingDate = Beginn unbekannt
 tournament.noCompletionDate = Nicht abgeschlossen
 loading = Lädt...
 updater.readingFileList = Lese Dateiliste
-secondAgo = Vor {0,number,\#}  Sekunden
+secondAgo = Vor {0,number,#}  Sekunden
 # Wie nennen wir Maps auf Deutsch?
 vault.maps.searchError = Karten konnten nicht geladen werden
 settings.notifications.displayNotification = Zeige Benachrichtigung
@@ -660,10 +677,11 @@ settings.appearance.chooseImage = Wähle ein Bild
 settings.general.theme.useNoImage = Kein Bild
 query.notContains = beinhaltet nicht
 coop.unknownMission = Unbekannt Mission
-game.couldNotJoin = Konnte Spiel mit id ''{0}'' nicht beitreten.
+# Fuzzy
+game.couldNotJoin = Konnte Spiel mit id ''''{0}'''' nicht beitreten.
 discord.disallowJoins = Verbieten Spielern über Discord deinem Spiel beizutreten.
 # Fuzzy
-replay.couldNotOpen = Replay mit id ''{0}'' konnte nicht geöffnet werden.
+replay.couldNotOpen = Replay mit id ''''{0}'''' konnte nicht geöffnet werden.
 view.showSidePane = Zeige Details
 view.hideSidePane = Verstecke Details
 menu.revealReplayFolder = Öffne Replay Ordner
@@ -673,12 +691,13 @@ menu.revealGamePrefsFile = Öffne game.pref Ordner
 ranked1v1.queuePopTimer = Matche in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Neue Karte generieren
-game.avgRating.format = {0,number,\#}
+game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Karte wird generiert...
 game.mapGeneration.notification.message = Bitte warten. (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Konnte Karte nicht generieren
 game.mapGeneration.failed.message = Die Generierung der zufälligen Karte ist fehlgeschlagen. Das Programm zur Generierung wird beendet.(timeout)
 game.mapGeneration.downloadGenerator.title = Lade Karten Generator {0} herunter
+# Fuzzy
 game.mapGeneration.generateMap.title = Generiere Karte... (Version\: {0}, Seed\: {1})
 login.environment = Serverumgebung
 login.button.downloadUpdate = Neuste Version herunter laden
@@ -689,7 +708,7 @@ login.ircServerHost = IRC Server Adresse
 login.withEmailWarning = Bitte logge dich mit Email und Nutzername ein.
 vault.next = Weiter
 vault.previous = Zurück
-vault.currentPage = Seite\: {0,number,\#}
+vault.currentPage = Seite\: {0,number,#}
 mapVault.recommended = M&M Team Favoriten
 settings.appearance.useNone = Kein Bild
 settings.chat.addAutoJoinChannel = Kanal hinzufügen
@@ -738,7 +757,8 @@ tutorial.tutorial = Tutorials
 tutorial.launch = Tutorials starten
 tutorial.mapName = Kartenname\: {0}
 tutorial.launchFailed = Feheler beim Tutorials starten
-mapVault.installationFailed = Das Installieren der Karte ''{0}'' ist fehlgeschlagen\: ''{1}''
+# Fuzzy
+mapVault.installationFailed = Das Installieren der Karte ''''{0}'''' ist fehlgeschlagen\: ''''{1}''''
 tutorial.loading = Tutorials laden
 tutorial.noneAvailable = Es gibt zur Zeit keine Tutorials
 clientUpdateAvailable.prereleaseNotification = Prerelease {0} is available ({1})
